# robot-navigation

./: README.md
robot_2dnav/: CMakeLists.txt  package.xml
robot_2dnav/include/: autonomous_return.h  pose_vector.h
robot_2dnav/launch/autonomous_navigation_demo/: move_base_demo.launch
robot_2dnav/launch/emergency_return/: emergency_controller.launch
robot_2dnav/launch/robot_localization/: fake_loc.launch
robot_2dnav/nav_config/demo_config/: costmap_common_params.yaml  local_costmap.yaml
robot_2dnav/nav_config/emergency_return_config/: local_costmap.yaml
robot_2dnav/src/: autonomous_return.cpp  pose_vector.cpp  simple_emergency_controller.cpp
robot_odom/: package.xml
robot_odom/launch/: robot_comb_odom.launch  robot_comb_odom_2.launch  robot_odom.launch
robot_odom/src/: robot_odometry.cpp  robot_raw_odometry.cpp
robot_simulation/robot_description/: CMakeLists.txt  package.xml
robot_simulation/robot_description/launch/: 2dnav.launch  2dnav.rviz
robot_simulation/robot_description/urdf/: robot.xacro
robot_simulation/robot_gazebo/: CMakeLists.txt  package.xml
robot_simulation/robot_gazebo/launch/simple_world/: simple_world.launch  simple_world_teleop.launch
robot_simulation/robot_gazebo/launch/willow_garage_world/: willow_garage.launch
robot_simulation/robot_gazebo/worlds/: simple.world  willow_garage.world
robot_simulation/robot_gazebo_plugin/: CMakeLists.txt
robot_simulation/robot_gazebo_plugin/include/: diff_drive_gazebo_plugin.h
robot_teleop/: CMakeLists.txt
robot_teleop/launch/: keyboard_teleop.launch
robot_teleop/src/: simple_verification_publisher.cpp
rtc_tiny_teleop/: CMakeLists.txt
rtc_tiny_teleop/include/rtc_tiny_teleop/: com.h
rtc_tiny_teleop/launch/: joy_teleop.launch
rtc_tiny_teleop/src/: com.cpp
src/robot_2dnav/: CMakeLists.txt  package.xml
src/robot_2dnav/include/: autonomous_return.h  goal_controller.h  pose_vector.h
src/robot_2dnav/launch/: amcl.launch  emergency_move_base.launch  fake_loc.launch  gmapping.launch  move_base.launch  move_base_demo.launch  robot_gmapping.launch
src/robot_2dnav/launch/autonomous_navigation_demo/: move_base_demo.launch
src/robot_2dnav/launch/emergency_return/: emergency_controller.launch  emergency_move_base.launch
src/robot_2dnav/map/: diplom_demo.yaml  empty_world_map.yaml
src/robot_2dnav/nav_config/: base_local_planner.yaml  base_local_planner_demo.yaml  costmap_common_params.yaml  global_costmap.yaml  local_costmap.yaml
src/robot_2dnav/nav_config/demo_config/: base_local_planner.yaml  costmap_common_params.yaml  global_costmap.yaml  local_costmap.yaml
src/robot_2dnav/nav_config/emergency_return_config/: base_local_planner.yaml  local_costmap.yaml
src/robot_2dnav/src/: arrs.cpp  cmd_vel_pub.cpp  goal_controller.cpp  teleop_tracker.cpp
src/robot_description/: CMakeLists.txt  package.xml
src/robot_description/launch/: robot.rviz  robot_rviz.launch
src/robot_description/urdf/: robot.xacro
src/robot_gazebo/launch/: robot.launch  robot_teleop_wg.launch  robot_wg.launch
src/robot_gazebo_plugin/src/: gazebo_ros_plugin.cpp
src/robot_msgs/: CMakeLists.txt  package.xml
src/robot_msgs/msg/: Goal.msg
src/robot_odom/: CMakeLists.txt  package.xml
src/robot_odom/launch/: robot_comb_odom.launch  robot_comb_odom_launch
src/robot_odom/src/: robot_odometry.cpp
src/robot_simulation/robot_description/launch/: 2dnav.launch  2dnav.rviz  robot.launch  robot.rviz
src/robot_simulation/robot_description/urdf/: robot.urdf  robot.xacro
src/robot_simulation/robot_gazebo/: package.xml
src/robot_simulation/robot_gazebo/launch/: diplom_demo.launch  empty_world_teleop.launch  willow_garage.launch  willow_garage_teleop.launch
src/robot_simulation/robot_gazebo/launch/empty_world/: empty_world.launch  empty_world_teleop.launch
src/robot_simulation/robot_gazebo/launch/willow_garage_world/: willow_garage_teleop.launch
src/robot_simulation/robot_gazebo/worlds/: demo.world  simple.world
src/robot_simulation/robot_gazebo_plugin/: CMakeLists.txt  package.xml
src/robot_simulation/robot_gazebo_plugin/include/: diff_drive_gazebo_plugin.h
src/robot_simulation/robot_gazebo_plugin/src/: diff_drive_gazebo_plugin.cpp  gazebo_ros_plugin.cpp  gazebo_ros_plugin.cpp~
src/robot_teleop/: CMakeLists.txt  package.xml
src/robot_teleop/launch/: joy_teleop.launch  keyboard_teleop.launch  robot_teleop.launch
src/robot_teleop/src/: joy_teleop.cpp  simple_verification_publisher.cpp
src/robot_tf/: CMakeLists.txt  package.xml
src/robot_tf/src/: tf_broadcaster.cpp
src/rtc_tiny_teleop/: package.xml
src/rtc_tiny_teleop/launch/: joy_teleop.launch
src/rtc_tiny_teleop/src/: joy_teleop.cpp  key_teleop.cpp  rtc_tiny_controller.cpp
src/rtk_tiny_teleop/: CMakeLists.txt  package.xml
src/rtk_tiny_teleop/include/rtk_tiny_teleop/: com.h
src/rtk_tiny_teleop/src/: com.cpp  key_teleop.cpp
