<?xml version="1.0"?>
<package>
  <name>robot_description</name>
  <version>0.0.0</version>
  <description>The robot_description package</description>
  <maintainer email="den@todo.todo">den</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>gazebo_ros</build_depend>
  <build_depend>urdf</build_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>urdf</run_depend>

  <export>

  </export>
</package>
